add icons, premium requests

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -22,3 +22,17 @@ osaifu_keitai:
 rakuten_drive:
   - com.estmob.android.sendy.app/com.estmob.android.sendy.app.ui.main.MainActivity
 
+amsterdam_dance_event:
+  - com.expobravoure.amsterdamdanceevent/com.expobravoure.amsterdamdanceevent.MainActivity
+
+infinite_learn_japanese:
+  - com.jernung.infinite.jpn/com.jernung.infinite.jpn.MainActivity
+
+next_inspect_self_inspect:
+  - com.manheim.nextinspectconsumer/com.manheim.nextinspectconsumer.MainActivity
+
+simplewear:
+  - com.thewizrd.simplewear/com.thewizrd.simplewear.MainActivity
+
+watrify:
+  - com.watrify.app/com.aquago.map.MainActivity
