--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -36,3 +36,9 @@ simplewear:
 
 watrify:
   - com.watrify.app/com.aquago.map.MainActivity
+
+mini_motorers_guide:
+  - com.mini.driversguide.usa/com.bmwgroup.driversguide.ui.home.HomeActivity
+
+edeka:
+  - de.edeka.genuss/de.edeka.app.mobile.MainActivity
