new icon: OneBit Adventure

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -22,3 +22,5 @@ osaifu_keitai:
 rakuten_drive:
   - com.estmob.android.sendy.app/com.estmob.android.sendy.app.ui.main.MainActivity
 
+onebit_adventure:
+  - com.GalacticSlice.OneBitAdventure/com.unity3d.player.UnityPlayerActivity
