--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -42,3 +42,27 @@ mini_motorers_guide:
 
 edeka:
   - de.edeka.genuss/de.edeka.app.mobile.MainActivity
+
+alienware_arena:
+  - com.alienwarearena/com.alienwarearena.MainActivity
+
+axmanager:
+  - com.frb.axmanager/com.frb.axmanager.ui.AxActivity
+
+coinswitch:
+  - com.coinswitch.kuber/com.coinswitch.kuber.MainActivity
+
+focus_friend:
+  - com.underthing.focus.friend/com.unity3d.player.UnityPlayerActivity
+
+home_connect:
+  - com.bshg.homeconnect.android.release/com.bshg.homeconnect.app.ui2019.navigation.BottomNavigationActivity.Bosch
+
+lemon8:
+  - com.bd.nproject/com.bytedance.nproject.app.MainActivity
+
+onshape_3d_cad:
+  - com.onshape.app/com.belmonttech.app.activities.BTSplashActivity
+
+_5g_only_network_mode:
+  - com.hunteralex.fivegonly/com.hunteralex.fivegonly.MainActivity
