icon update: Beeline

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -24,3 +24,6 @@ rakuten_drive:
 
 onebit_adventure:
   - com.GalacticSlice.OneBitAdventure/com.unity3d.player.UnityPlayerActivity
+
+beeline:
+  - ru.beeline.services/ru.beeline.DefaultActivityAlias
