--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -66,3 +66,15 @@ onshape_3d_cad:
 
 _5g_only_network_mode:
   - com.hunteralex.fivegonly/com.hunteralex.fivegonly.MainActivity
+
+comaps:
+  - app.comaps.google/app.organicmaps.DownloadResourcesActivity
+
+discover_mobile:
+  - com.discoverfinancial.mobile/r8a5fc309.n7be233ae.d752476a6.j4e1e6ffe
+
+letterboxd:
+  - com.letterboxd.letterboxd/com.letterboxd.letterboxd.MainActivity
+
+brimo:
+  - id.co.bri.brimo/id.co.bri.brimo.IndependenceDayIcon
