--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -49,7 +49,7 @@ alienware_arena:
 axmanager:
   - com.frb.axmanager/com.frb.axmanager.ui.AxActivity
 
-coinswitch:
+coinswitch_bitkuber:
   - com.coinswitch.kuber/com.coinswitch.kuber.MainActivity
 
 focus_friend:
