Add icons&compinfo (#1250)
* add icons, premium requests

* add componentinfo

* add icons

* add componentinfo

* small fix

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -22,3 +22,59 @@ osaifu_keitai:
 rakuten_drive:
   - com.estmob.android.sendy.app/com.estmob.android.sendy.app.ui.main.MainActivity
 
+amsterdam_dance_event:
+  - com.expobravoure.amsterdamdanceevent/com.expobravoure.amsterdamdanceevent.MainActivity
+
+infinite_learn_japanese:
+  - com.jernung.infinite.jpn/com.jernung.infinite.jpn.MainActivity
+
+next_inspect_self_inspect:
+  - com.manheim.nextinspectconsumer/com.manheim.nextinspectconsumer.MainActivity
+
+simplewear:
+  - com.thewizrd.simplewear/com.thewizrd.simplewear.MainActivity
+
+watrify:
+  - com.watrify.app/com.aquago.map.MainActivity
+
+mini_motorers_guide:
+  - com.mini.driversguide.usa/com.bmwgroup.driversguide.ui.home.HomeActivity
+
+edeka:
+  - de.edeka.genuss/de.edeka.app.mobile.MainActivity
+
+alienware_arena:
+  - com.alienwarearena/com.alienwarearena.MainActivity
+
+axmanager:
+  - com.frb.axmanager/com.frb.axmanager.ui.AxActivity
+
+coinswitch_bitkuber:
+  - com.coinswitch.kuber/com.coinswitch.kuber.MainActivity
+
+focus_friend:
+  - com.underthing.focus.friend/com.unity3d.player.UnityPlayerActivity
+
+home_connect:
+  - com.bshg.homeconnect.android.release/com.bshg.homeconnect.app.ui2019.navigation.BottomNavigationActivity.Bosch
+
+lemon8:
+  - com.bd.nproject/com.bytedance.nproject.app.MainActivity
+
+onshape_3d_cad:
+  - com.onshape.app/com.belmonttech.app.activities.BTSplashActivity
+
+_5g_only_network_mode:
+  - com.hunteralex.fivegonly/com.hunteralex.fivegonly.MainActivity
+
+comaps:
+  - app.comaps.google/app.organicmaps.DownloadResourcesActivity
+
+discover_mobile:
+  - com.discoverfinancial.mobile/r8a5fc309.n7be233ae.d752476a6.j4e1e6ffe
+
+letterboxd:
+  - com.letterboxd.letterboxd/com.letterboxd.letterboxd.MainActivity
+
+brimo:
+  - id.co.bri.brimo/id.co.bri.brimo.IndependenceDayIcon
