new icon: NF (Народный фронт)

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -27,3 +27,6 @@ onebit_adventure:
 
 beeline:
   - ru.beeline.services/ru.beeline.DefaultActivityAlias
+
+nf:
+  - ru.onf.dobro/ru.mosreg.ekjp.ui.start.StartActivity
