new icon: Termux Fingerprint

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -30,3 +30,6 @@ beeline:
 
 nf:
   - ru.onf.dobro/ru.mosreg.ekjp.ui.start.StartActivity
+
+termux_fingerprint:
+  - pw.hexed.fingerprint/pw.hexed.fingerprint.SplashActivity
