new icon: Neftmagistral

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -33,3 +33,6 @@ nf:
 
 termux_fingerprint:
   - pw.hexed.fingerprint/pw.hexed.fingerprint.SplashActivity
+
+neftmagistral:
+  - centrida.neftmagistral/centrida.neftmagistral.screens.SplashActivity
