new icon: BAZAR

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -36,3 +36,6 @@ termux_fingerprint:
 
 neftmagistral:
   - centrida.neftmagistral/centrida.neftmagistral.screens.SplashActivity
+
+bazar:
+  - it.elapp.bazar/it.elapp.bazar.MainActivity
