Fixed 2 ComponentInfos & added 3 new icons

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,21 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+square_point_of_sale:
+  - com.squareup.ui.PaymentActivity
+  - com.squareup.ui.main.MainActivity
+
+expressvpn:
+  - com.expressvpn.vpn.ui.SplashActivity
+  - com.expressvpn.splash.SplashActivity
+  - com.expressvpn.vpn.splash.ClassicAlias
+
+laresmart:
+  - com.smart.ThingSplashActivity
+
+simo:
+  - com.solisapp.solis.MainActivity
+
+barcode_scanner:
+  - com.manateeworks.barcodescanners.SplashActivity
