Fixed colours on an icon, added 2 new icons

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -30,3 +30,9 @@ simo:
 
 barcode_scanner:
   - com.manateeworks.barcodescanners/com.manateeworks.barcodescanners.SplashActivity
+
+hopp:
+  - ee.hopp.client/ee.mtakso.client.activity.SplashHomeActivity
+
+spotangels:
+  - com.spotangels.android/com.spotangels.android.ui.StartActivity
