Add BHIM app logo (created using rupee symbol due to copyright)

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -1,7 +1,7 @@
 #
-# new_icon_1:
-#   - com.example/com.example.MainActivity
-#
+in_org_npci_bhim:
+    - in.org.npci.bhim/in.org.npci.bhim.MainActivity/
+
 # new_icon_2:
 #   - com.example.1/com.example.MainActivity
 #   - com.example.2/com.example.MainActivity
