Renamed new barcode_scanner icon

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -28,7 +28,7 @@ laresmart:
 simo:
   - com.solisapp.solis/com.solisapp.solis.MainActivity
 
-barcode_scanner:
+barcode_scanner_manateeworks:
   - com.manateeworks.barcodescanners/com.manateeworks.barcodescanners.SplashActivity
 
 hopp:
