Fixed 2 ComponentInfos & added 3 new icons (#1252)
* Fixed 2 ComponentInfos & added 3 new icons

* Fixed ComponentInfo

* Fixed colours on an icon, added 2 new icons

* Renamed new barcode_scanner icon

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,27 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+square_point_of_sale:
+  - com.squareup/com.squareup.ui.PaymentActivity
+  - com.squareup/com.squareup.ui.main.MainActivity
+
+expressvpn:
+  - com.expressvpn.vpn/com.expressvpn.vpn.ui.SplashActivity
+  - com.expressvpn.vpn/com.expressvpn.splash.SplashActivity
+  - com.expressvpn.vpn/com.expressvpn.vpn.splash.ClassicAlias
+
+laresmart:
+  - com.laresmart.clean/com.smart.ThingSplashActivity
+
+simo:
+  - com.solisapp.solis/com.solisapp.solis.MainActivity
+
+barcode_scanner_manateeworks:
+  - com.manateeworks.barcodescanners/com.manateeworks.barcodescanners.SplashActivity
+
+hopp:
+  - ee.hopp.client/ee.mtakso.client.activity.SplashHomeActivity
+
+spotangels:
+  - com.spotangels.android/com.spotangels.android.ui.StartActivity
