add icons, premium request

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -36,3 +36,32 @@ hopp:
 
 spotangels:
   - com.spotangels.android/com.spotangels.android.ui.StartActivity
+
+blue_shield_of_california:
+  - com.blueshieldca.prod/com.bsc.bsca.cem.ui.mvp.splash.SplashActivity
+
+collective_health:
+  - com.collectivehealth.member/com.collectivehealth.MainActivity
+
+find_it_fix_it:
+  - gov.seattle.searequests/com.reporters.MainActivity
+
+google_my_pixel:
+  category: 'Google'
+  compinfos:
+    - com.google.android.apps.tips/com.google.android.apps.tips.fortnite.base
+
+insite_living:
+  - com.getflamingo.InsiteLiving/com.hellohealthy.GetFlamingo.MainActivity
+
+quantum_fiber:
+  - com.centurylink.biwf/com.centurylink.biwf.screens.splashScreen.SplashScreenActivity
+
+valet_living_resident:
+  - com.valetliving.valetlivingrelease/crc641d710862ce50c2ea.MainActivity
+
+vsp_vision_care:
+  - com.vsp.mobile/com.vsp.mobile.MainActivity
+
+wex_benefits:
+  -  com.lighthouse1.mobilebenefits.dbi/com.lighthouse1.mobilebenefits.activity.LoginActivity
