--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -65,3 +65,15 @@ vsp_vision_care:
 
 wex_benefits:
   -  com.lighthouse1.mobilebenefits.dbi/com.lighthouse1.mobilebenefits.activity.LoginActivity
+
+filemail:
+  - no.degree.filemail.app/no.degree.filemail.app.ui.activities.MainActivity
+
+nuvio_streaming:
+  - com.nuvio.app/com.nuvio.app.MainActivity
+
+pixel_play:
+  - com.theveloper.pixelplay/com.theveloper.pixelplay.MainActivity
+
+trenit:
+  - eu.baroncelli.oraritrenitalia/eu.baroncelli.oraritrenitalia.mainactivity.MainActivity
