--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -77,3 +77,6 @@ pixel_play:
 
 trenit:
   - eu.baroncelli.oraritrenitalia/eu.baroncelli.oraritrenitalia.mainactivity.MainActivity
+
+paybyphone:
+  - com.paybyphone/com.paybyphone.MainActivity
