icons and compinfo

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -92,3 +92,6 @@ yatri_sathi:
 
 yatri_sathi:
   - in.juspay.jatrisaathi/com.mobility.movingtech.MainActivity
+
+ixigo:
+  - com.ixigo/com.ixigo.DefaultSplashScreenActivity
