--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -80,3 +80,16 @@ trenit:
 
 paybyphone:
   - com.paybyphone/com.paybyphone.MainActivity
+
+syncthing:
+  - com.github.catfriend1.syncthingfork/com.nutomic.syncthingandroid.activities.FirstStartActivity
+
+bhim:
+  - in.org.npci.upiapp/earaajbv.I
+
+yatri_sathi:
+  - in.juspay.jatrisaathi/in.juspay.mobility.MainActivity
+  - in.juspay.jatrisaathi/com.mobility.movingtech.MainActivity
+
+ixigo:
+  - com.ixigo/com.ixigo.DefaultSplashScreenActivity
