--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -123,3 +123,9 @@ sydney_health:
 
 tasc_for_android:
   - com.tasconline.uba.pux.android/com.tasconline.uba.pux.views.SignInActivity
+
+zelle:
+  - com.zellepay.zelle/com.earlywarning.zelle.ui.SplashActivity
+
+foodyou:
+  - com.maksimowiczm.foodyou/com.maksimowiczm.foodyou.infrastructure.android.MainActivity
