--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -129,3 +129,12 @@ zelle:
 
 foodyou:
   - com.maksimowiczm.foodyou/com.maksimowiczm.foodyou.infrastructure.android.MainActivity
+
+makeacopy:
+  - de.schliweb.makeacopy/de.schliweb.makeacopy.MainActivity
+
+material_capsule:
+  - com.pryshedko.mtisland/com.pryshedko.mtisland.MyMainActivity
+
+oxproxion:
+  - io.github.stardomains3.oxproxion/io.github.stardomains3.oxproxion.MainActivity
