Add icons&compinfo (#1256)
* add icons, premium requests

* add componentinfo

* add icons

* small fix

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -93,3 +93,48 @@ yatri_sathi:
 
 ixigo:
   - com.ixigo/com.ixigo.DefaultSplashScreenActivity
+
+aloe_bud:
+  - club.aloe.Aloe/club.aloe.Aloe.MainActivity
+
+cvs_caremark:
+  - com.caremark.caremark/com.caremark.caremark.LauncherActivity
+
+cvs_health:
+  - com.cvs.launchers.cvs/com.cvs.MainActivity
+
+harvest_town:
+  - com.harvest.android.gr/org.cocos2dx.lua.AppActivity
+
+hcmtogo:
+  - com.hcmtogo.workforceready/com.hcmtogo.workforceready.MainActivity
+
+moondrop:
+  - com.moondroplab.moondrop.moondrop_app/com.moondroplab.moondrop.moondrop_app.MainActivity
+
+rain_alarm:
+  - de.mdiener.rain.usa/de.mdiener.rain.usa.MainMaps2
+
+spectrum_tv:
+  - com.TWCableTV/com.twc.android.ui.login.SpectrumLoginActivity
+
+sydney_health:
+  - com.anthem.sydney/com.anthem.madt.onesydney.MainActivity
+
+tasc_for_android:
+  - com.tasconline.uba.pux.android/com.tasconline.uba.pux.views.SignInActivity
+
+zelle:
+  - com.zellepay.zelle/com.earlywarning.zelle.ui.SplashActivity
+
+foodyou:
+  - com.maksimowiczm.foodyou/com.maksimowiczm.foodyou.infrastructure.android.MainActivity
+
+makeacopy:
+  - de.schliweb.makeacopy/de.schliweb.makeacopy.MainActivity
+
+material_capsule:
+  - com.pryshedko.mtisland/com.pryshedko.mtisland.MyMainActivity
+
+oxproxion:
+  - io.github.stardomains3.oxproxion/io.github.stardomains3.oxproxion.MainActivity
