Remove "google_ai_edge_gallery"

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -23,10 +23,8 @@ folder_root:
   compinfos:
     - com.jrummyapps.rootbrowser.classic/com.jrummy.file.manager.RootBrowserActivity
 
-google_ai_edge_gallery:
-  category: "Google"
-  compinfos:
-    - com.google.aiedge.gallery/com.google.ai.edge.gallery.MainActivity
+google_gallery_ai_edge:
+  - com.google.aiedge.gallery/com.google.ai.edge.gallery.MainActivity
 
 jihanpi:
   - jp.jihanpi/jp.co.suntory.atpay.ui.controller.MainActivity
