--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -24,7 +24,7 @@ folder_root:
     - com.jrummyapps.rootbrowser.classic/com.jrummy.file.manager.RootBrowserActivity
 
 google_gallery_ai_edge:
-  - com.google.aiedge.gallery/com.google.ai.edge.gallery.MainActivity
+  - com.google.ai.edge.gallery/com.google.ai.edge.gallery.MainActivity
 
 jihanpi:
   - jp.jihanpi/jp.co.suntory.atpay.ui.controller.MainActivity
