Add 10 app icons & Fix circle size (#1257)
* Add 10 app icons

- d Point
- edion
- Folder Root (for "Root Browser")
- Google AI Edge Gallery
- ジハンピ (as "Jihanpi")
- mixi
- motorola Secure
- motorola Secure Folder
- V Point
- Play Station Family

* Fix "radiko" icon

* Remove "google_ai_edge_gallery"

* missing "."

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,34 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+d_point:
+  - com.nttdocomo.android.dpoint/com.nttdocomo.android.dpoint.MainActivity
+
+edion:
+  - com.edion.members/com.edion.members.activities.MainActivity
+
+folder_root:
+  category: "Folders"
+  compinfos:
+    - com.jrummyapps.rootbrowser.classic/com.jrummy.file.manager.RootBrowserActivity
+
+google_gallery_ai_edge:
+  - com.google.ai.edge.gallery/com.google.ai.edge.gallery.MainActivity
+
+jihanpi:
+  - jp.jihanpi/jp.co.suntory.atpay.ui.controller.MainActivity
+
+motorola_secure:
+  - com.motorola.securityhub/com.motorola.securityhub.ui.view.MainActivity
+
+motorola_secure_folder:
+  - com.motorola.securevault/com.motorola.securevault.MainActivityLauncher
+
+v_point:
+  - jp.co.ccc.Tsite/jp.co.ccc.tapps.SplashActivity
+
+play_station_family:
+  - com.playstation.ohana.android/com.playstation.ohana.android.TopActivity
+
+mixi:
+  - jp.mixi/jp.mixi.android.app.MainActivity
