--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -43,3 +43,12 @@ play_station_family:
 
 mixi:
   - jp.mixi/jp.mixi.android.app.MainActivity
+
+iucu:
+  - com.ifs.banking.fiid1339/com.banking.bankinglibrary.activities.SplashActivity
+
+iu_hsa_fsa:
+  - com.lighthouse1.mobilebenefits.niu/com.lighthouse1.mobilebenefits.activity.LoginActivity
+
+my_iu_health:
+  - org.iuhealth.healthelife.play/com.cerner.healthelife_android.presenter.MainWebViewActivity
