--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -52,3 +52,21 @@ iu_hsa_fsa:
 
 my_iu_health:
   - org.iuhealth.healthelife.play/com.cerner.healthelife_android.presenter.MainWebViewActivity
+
+akg_headphones:
+  - com.harman.akgn20lt/com.harman.akg.headphone.ui.welcome.SplashNewNoVideoActivity
+
+androidify:
+  - com.android.developers.androidify/com.android.developers.androidify.MainActivity
+
+lissen:
+  - org.grakovne.lissen/org.grakovne.lissen.ui.activity.AppActivity
+
+meraki:
+  - com.meraki.Dashboard/com.meraki.shared.MainActivity
+
+pawxy:
+  - com.pawxy.browser/com.pawxy.browser.core.Browser$A
+
+slideshow_wallpaper:
+  - io.github.doubi88.slideshowwallpaper/io.github.doubi88.slideshowwallpaper.preferences.WallpaperPreferencesActivity
