--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -56,7 +56,7 @@ my_iu_health:
 akg_headphones:
   - com.harman.akgn20lt/com.harman.akg.headphone.ui.welcome.SplashNewNoVideoActivity
 
-androidify:
+androidify_new:
   - com.android.developers.androidify/com.android.developers.androidify.MainActivity
 
 lissen:
