Add icons&compinfo (#1258)
* add icons, premium request

* add icons

* add componentinfo

* small fix

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -43,3 +43,30 @@ play_station_family:
 
 mixi:
   - jp.mixi/jp.mixi.android.app.MainActivity
+
+iucu:
+  - com.ifs.banking.fiid1339/com.banking.bankinglibrary.activities.SplashActivity
+
+iu_hsa_fsa:
+  - com.lighthouse1.mobilebenefits.niu/com.lighthouse1.mobilebenefits.activity.LoginActivity
+
+my_iu_health:
+  - org.iuhealth.healthelife.play/com.cerner.healthelife_android.presenter.MainWebViewActivity
+
+akg_headphones:
+  - com.harman.akgn20lt/com.harman.akg.headphone.ui.welcome.SplashNewNoVideoActivity
+
+androidify_new:
+  - com.android.developers.androidify/com.android.developers.androidify.MainActivity
+
+lissen:
+  - org.grakovne.lissen/org.grakovne.lissen.ui.activity.AppActivity
+
+meraki:
+  - com.meraki.Dashboard/com.meraki.shared.MainActivity
+
+pawxy:
+  - com.pawxy.browser/com.pawxy.browser.core.Browser$A
+
+slideshow_wallpaper:
+  - io.github.doubi88.slideshowwallpaper/io.github.doubi88.slideshowwallpaper.preferences.WallpaperPreferencesActivity
