update philips icons (make textless icons as main)

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -86,3 +86,21 @@ browser:
 
 _3c_aio_toolbox:
   - ccc71.at.free/ccc71.at.at_main_popup
+
+philips_airplus_alt_1: {}
+philips_baby_monitor_plus_alt_1: {}
+philips_entertainment_alt_1: {}
+philips_groomtribe_alt_1: {}
+philips_headphones_alt_1: {}
+philips_home_safety_alt_1: {}
+philips_homeid_alt_1: {}
+philips_homerun_robot_alt_1: {}
+philips_hue_alt_1: {}
+philips_lumea_ipl_alt_1: {}
+philips_oneblade_alt_1: {}
+philips_pet_series_alt_1: {}
+philips_sleepmapper_alt_1: {}
+philips_smart_tv_alt_1: {}
+philips_sonicare_alt_1: {}
+philips_sonicare_for_kids_alt_1: {}
+philips_tv_remote_alt_1: {}
