new compinfo: BHIM

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -104,3 +104,6 @@ philips_smart_tv_alt_1: {}
 philips_sonicare_alt_1: {}
 philips_sonicare_for_kids_alt_1: {}
 philips_tv_remote_alt_1: {}
+
+bhim:
+  - in.org.npci.bhim/in.org.npci.bhim.MainActivity
