--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -107,3 +107,6 @@ philips_tv_remote_alt_1: {}
 
 bhim:
   - in.org.npci.bhim/in.org.npci.bhim.MainActivity
+
+_3cx:
+  - com.tcx.sipphone14/com.tcx.sipphone.DesktopFragmented
