new icon: Dice Tech Careers

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -110,3 +110,6 @@ bhim:
 
 _3cx:
   - com.tcx.sipphone14/com.tcx.sipphone.DesktopFragmented
+
+dice_tech_careers:
+  - com.dice.app.jobs/com.dice.app.ui.jobs.activities.RoutingActivity
