new icon: CAD Assistant

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -113,3 +113,6 @@ _3cx:
 
 dice_tech_careers:
   - com.dice.app.jobs/com.dice.app.ui.jobs.activities.RoutingActivity
+
+cad_assistant:
+  - org.opencascade.cadassistant/org.opencascade.cadassistant.CADAssistant
