--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -116,3 +116,6 @@ dice_tech_careers:
 
 cad_assistant:
   - org.opencascade.cadassistant/org.opencascade.cadassistant.CADAssistant
+
+myvib:
+  - com.vib.myvib2/com.vib.app.mvvm.splash.views.SplashActivity
