new icon: Kali Linux Master

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -119,3 +119,6 @@ cad_assistant:
 
 myvib:
   - com.vib.myvib2/com.vib.app.mvvm.splash.views.SplashActivity
+
+kali_linux_master:
+  - com.Inew.ikali/com.Inew.ikali.SplashActivity
