new icon: CraftControl

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -122,3 +122,6 @@ myvib:
 
 kali_linux_master:
   - com.Inew.ikali/com.Inew.ikali.SplashActivity
+
+craftcontrol:
+  - net.cloudcake.craftcontrol/net.cloudcake.craftcontrol.StartActivity
