new icon: SmugMug

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -125,3 +125,6 @@ kali_linux_master:
 
 craftcontrol:
   - net.cloudcake.craftcontrol/net.cloudcake.craftcontrol.StartActivity
+
+smugmug:
+  - com.snapwood.smugfolio/com.smugmug.android.activities.SmugMainActivity
