new icon: SketchPro

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -128,3 +128,6 @@ craftcontrol:
 
 smugmug:
   - com.snapwood.smugfolio/com.smugmug.android.activities.SmugMainActivity
+
+sketchpro:
+  - com.axis.sketchpro/com.axis.sketchpro.ui.mainview.MainActivity
