--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -131,3 +131,36 @@ smugmug:
 
 sketchpro:
   - com.axis.sketchpro/com.axis.sketchpro.ui.mainview.MainActivity
+
+benefitpay:
+  - mobi.foo.benefit/mobi.foo.walletbase.activity.LauncherActivity
+
+bling:
+  - de.blingcard/de.blingcard.MainActivity
+
+giga_icon:
+  - it.mirko.gigaicon/it.mirko.gigaicon.LoadingActivity
+
+london_drugs:
+  - com.mobify.builds.ldextras/com.mobify.builds.ldextras.MainActivity
+
+nextcloud_passwords:
+  - de.jbservices.nc_passwords_app/io.flutter.embedding.android.FlutterFragmentActivity
+
+qerko:
+  - com.itispaid/com.itispaid.MainActivity
+
+reado:
+  - com.read_o/com.read_o.MainActivity
+
+re_equalizer_fx:
+  - com.wiseschematics.reeq01/com.wiseschematics.reeq01.EQ
+
+wear_installer_2:
+  - org.freepoc.wearinstaller2/org.freepoc.wearinstaller2.MainActivity
+
+world_of_hyatt:
+  - com.Hyatt.hyt/com.hyt.auth.activities.SplashActivity
+
+_1fm:
+  - one.dot.fm/one.dot.fm.Splashactivity
