--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -164,3 +164,13 @@ world_of_hyatt:
 
 _1fm:
   - one.dot.fm/one.dot.fm.Splashactivity
+
+installerx:
+  - com.rosan.installer.x.revived/com.rosan.installer.ui.activity.LauncherAlias
+
+taler_wallet:
+  - net.taler.merchantpos/net.taler.merchantpos.MainActivity
+  - net.taler.cashier/net.taler.cashier.MainActivity
+
+mytelenor:
+  - se.telenor.mytelenor/com.telenor.app.mytelenor.ui.LoginActivity
