new icons: Delta Force + Garena (+ alts)

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -15,3 +15,12 @@
 
 pizzafabrika:
   - com.pizzafabrika.android/com.pizzafabrika.pizzasoft.android.MainActivity
+
+delta_force:
+  - com.proxima.dfm/com.epicgames.ue4.SplashActivity
+
+delta_force_garena:
+  - com.garena.game.df/com.epicgames.ue4.SplashActivity
+
+delta_force_alt_1: {}
+delta_force_garena_alt_1: {}
