new icons: Zalith Launcher

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -24,3 +24,6 @@ delta_force_garena:
 
 delta_force_alt_1: {}
 delta_force_garena_alt_1: {}
+
+zalith_launcher:
+  - com.movtery.zalithlauncher/com.movtery.zalithlauncher.ui.activity.SplashActivity
