--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -27,3 +27,6 @@ delta_force_garena_alt_1: {}
 
 zalith_launcher:
   - com.movtery.zalithlauncher/com.movtery.zalithlauncher.ui.activity.SplashActivity
+
+citron:
+  - org.citron.citron_emu/org.citron.citron_emu.ui.main.MainActivity
