--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,21 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+pizzafabrika:
+  - com.pizzafabrika.android/com.pizzafabrika.pizzasoft.android.MainActivity
+
+delta_force:
+  - com.proxima.dfm/com.epicgames.ue4.SplashActivity
+
+delta_force_garena:
+  - com.garena.game.df/com.epicgames.ue4.SplashActivity
+
+delta_force_alt_1: {}
+delta_force_garena_alt_1: {}
+
+zalith_launcher:
+  - com.movtery.zalithlauncher/com.movtery.zalithlauncher.ui.activity.SplashActivity
+
+citron:
+  - org.citron.citron_emu/org.citron.citron_emu.ui.main.MainActivity
