--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -30,3 +30,12 @@ zalith_launcher:
 
 citron:
   - org.citron.citron_emu/org.citron.citron_emu.ui.main.MainActivity
+  
+blinkit:
+  - com.grofers.customerapp/com.grofers.customerapp.DEFAULT
+  - com.grofers.customerapp/com.grofers.customerapp.DEEPAWALI
+  - com.grofers.customerapp/com.grofers.customerapp.NAVARATRI
+
+scan_plus:
+  - plus.scan.android/plus.scan.android.ui.common.launcher.LauncherActivity
+
