add icons, premium request

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -30,3 +30,15 @@ zalith_launcher:
 
 citron:
   - org.citron.citron_emu/org.citron.citron_emu.ui.main.MainActivity
+
+ln:
+  - de.rnd.ln/de.rnd.oneplatform.features.main.MainActivity
+
+nah_sh:
+  - de.hafas.android.nahsh/de.hafas.main.HafasApp
+
+netto_plus:
+  - dk.dsg.netto/dk.sg.cp.features.common.ui.SplashActivity
+
+welt_news:
+  - de.cellular.n24hybrid/de.weltn24.news.main.view.MainScreenActivity
