add icons, premium request

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -42,3 +42,27 @@ netto_plus:
 
 welt_news:
   - de.cellular.n24hybrid/de.weltn24.news.main.view.MainScreenActivity
+
+codice_fiscale:
+  - it.bob.codicefiscale.noads/it.bob.codicefiscale.view.Main
+
+eon:
+  - com.eonenergia.eon/com.eonenergia.eon.MainActivity
+
+luna_controller:
+  - com.amazon.tails/com.amazon.tails.ui.screens.home.HomeActivity
+
+mysugr:
+  - com.mysugr.android.companion/com.mysugr.logbook.product.LogbookProductActivity
+
+neve_wifi:
+  - com.nevewifi.plikc/com.smart.ThingSplashActivity
+
+nora:
+  - jp.nonbili.nora/jp.nonbili.nora.MainActivity
+
+pastebin:
+  - pzy64.pastebinpro/pzy64.pastebinpro.Splash
+
+quick_weather:
+  - com.ominous.quickweather/com.ominous.quickweather.activity.MainActivity
