add icons, premium request

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -66,3 +66,21 @@ pastebin:
 
 quick_weather:
   - com.ominous.quickweather/com.ominous.quickweather.activity.MainActivity
+
+calibre_web_companion:
+  - de.doen1el.calibreWebCompanion/de.doen1el.calibreWebCompanion.MainActivity
+
+der_postillon:
+  - com.postillon/co.median.android.LaunchActivity
+
+infield:
+  - com.hoeme.app/com.hoeme.app.main.ui.RoutingActivity
+
+kagi_summarize:
+  - com.kagi.summarize/com.kagi.summarize.MainActivity
+
+naruto_kunoichi_training:
+  - com.dinaki.kt/org.renpy.android.PythonSDLActivity
+
+ace_attorney_trilogy:
+  - jp.co.capcom.gyakusai123/com.unity3d.player.UnityPlayerActivity
