--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -84,3 +84,9 @@ naruto_kunoichi_training:
 
 ace_attorney_trilogy:
   - jp.co.capcom.gyakusai123/com.unity3d.player.UnityPlayerActivity
+
+aktion_mensch:
+  - de.aktionmensch.AMMobileAppDistribution/de.aktionmensch.app.MainActivity
+
+kvb:
+  - koeln.kvb.ticket.app/com.cubic.cumo.mts.MainActivity
