--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -90,3 +90,24 @@ aktion_mensch:
 
 kvb:
   - koeln.kvb.ticket.app/com.cubic.cumo.mts.MainActivity
+
+arc_video_player:
+  - com.videoplayer.arcplayer/com.teeter.videoplayer.SplashActivity
+
+blurwall:
+  - apps.automan.blurwallpaper/apps.automan.blurwallpaper.MainActivity
+
+crossfy:
+  - com.crossfy.app/com.crossfy.app.MainActivity
+
+exness_trade:
+  - com.exness.android.pa/com.exness.features.entry.impl.presentation.EntryActivity
+
+reev_dark:
+  - com.reevdark.grabsterstudios/com.reevdark.grabsterstudios.MainActivity
+
+sukisu_ultra:
+  - com.sukisu.ultra/com.sukisu.ultra.ui.MainActivity
+
+momentum:
+  - shub39.momentum.play/shub39.momentum.app.MainActivity
