--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -111,3 +111,6 @@ sukisu_ultra:
 
 momentum:
   - shub39.momentum.play/shub39.momentum.app.MainActivity
+
+rush:
+  - com.shub39.rush.play/com.shub39.rush.app.MainActivity
