new icons and comp update (#1263)
* new icons and comp update

* update

---------

Co-authored-by: Gitro <108683123+GitGitro@users.noreply.github.com>

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -30,6 +30,14 @@ zalith_launcher:
 
 citron:
   - org.citron.citron_emu/org.citron.citron_emu.ui.main.MainActivity
+  
+blinkit:
+  - com.grofers.customerapp/com.grofers.customerapp.DEFAULT
+  - com.grofers.customerapp/com.grofers.customerapp.DEEPAWALI
+  - com.grofers.customerapp/com.grofers.customerapp.NAVARATRI
+
+scan_plus:
+  - plus.scan.android/plus.scan.android.ui.common.launcher.LauncherActivity
 
 ln:
   - de.rnd.ln/de.rnd.oneplatform.features.main.MainActivity
