new 9 premium request icons

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,33 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+billout:
+  - com.pvveb.billout/com.pvveb.billout.SplashActivity
+
+clean_email:
+  - email.clean.android/email.clean.android.MainActivity
+
+discover_mobile:
+  - com.discoverfinancial.mobile/icraw8.fNDHB2.iinVu1.kyHjx8
+
+lena_icon_pack:
+  - one4studio.iconpack.lena/com.candybar.dev.activities.SplashActivity
+
+river:
+  - com.river.riverapp/com.river.riverapp.MainActivity
+
+the_budgeting_app:
+  - com.thebudgetingapp.thebudgetingapp/com.thebudgetingapp.thebudgetingapp.MainActivity
+
+timelybills:
+  - in.usefulapp.timelybills/in.usefulapps.timelybills.activity.SplashActivity
+
+us_mobile:
+  - com.usmobile.dashboard/com.usmobile.dashboard.MainActivity
+
+visual_voicemail:
+  - com.vna.service.vvm/com.vna.service.vvm.activity.setup.WelcomeActivity
+
+zumimall:
+  - com.zumimall.protecthome/com.ppstrong.weeye.SplashActivity
