--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -48,3 +48,6 @@ kagi_news:
 
 reev_chroma:
   - com.reevchroma.grabsterstudios/com.reevchroma.grabsterstudios.MainActivity
+
+kfc:
+  - com.delosi.kfc.app/com.delosi.kfc.app.MainActivity
