--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -42,3 +42,12 @@ visual_voicemail:
 
 zumimall:
   - com.zumimall.protecthome/com.ppstrong.weeye.SplashActivity
+
+kagi_news:
+  - com.kagi.news/com.kagi.news.MainActivity
+
+reev_chroma:
+  - com.reevchroma.grabsterstudios/com.reevchroma.grabsterstudios.MainActivity
+
+kfc:
+  - com.delosi.kfc.app/com.delosi.kfc.app.MainActivity
