--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -49,3 +49,9 @@ t_locker:
 
 water_drinking_water_finder:
   - de.pnpq.waterlocator/de.pnpq.osmlocator.base.activities.AppMainActivity
+
+glass_widgets:
+  - com.appslab.glass.widgets/com.appslab.glass.widgets.MainActivity
+
+shappky:
+  - com.yn.shappky/com.yn.shappky.MainActivity
