--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -55,3 +55,6 @@ glass_widgets:
 
 shappky:
   - com.yn.shappky/com.yn.shappky.MainActivity
+
+monument_valley:
+  - com.ustwo.mv.epicgames/com.unity3d.player.UnityPlayerActivity
