Add icons&compinfo (#1267)
* add icons, premium requests

* add icons

* add componentinfo

* small fix

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,49 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+
+aldi_nord:
+  - de.aldiNord.android/de.aldiNord.android.applobby.AppLobbyActivity
+
+asiana_airlines:
+  - com.ssm.asiana/com.ssm.asiana.view.IntroActivity
+
+cotti_coffee:
+  - com.cotticoffee.intl.AP/com.cotticoffee.intl.MainActivity
+
+gloria_jeans_rewards:
+  - com.rfg.gloriajeans/crc64687f12693417a27b.SplashActivity
+
+incheon_airport:
+  - com.ubivelox.icairport/com.ubivelox.icairport.IntroActivity
+
+mein_orthomol:
+  - com.orthomol.b2capp/com.orthomol.b2capp.MainActivity
+
+nomad_esim:
+  - com.lotusflare.nomad.mobile.android/com.lotusflare.nomad.mobile.android.NomadActivity
+
+opensignal:
+  - com.staircase3.opensignal/com.staircase3.opensignal.goldstar.loadingconfig.LoadConfigActivity
+
+snap_send_solve:
+  - com.outware.snapsendsolve/com.outware.snapsendsolve.feature.splash.presentation.SplashActivity
+
+the_coffee_club:
+  - au.thecoffeeclub/crc647ccd6bb8835f6745.MainActivity
+
+t_locker:
+  - io.mobinity.locker/io.mobinity.locker.PermissionActivity
+
+water_drinking_water_finder:
+  - de.pnpq.waterlocator/de.pnpq.osmlocator.base.activities.AppMainActivity
+
+glass_widgets:
+  - com.appslab.glass.widgets/com.appslab.glass.widgets.MainActivity
+
+shappky:
+  - com.yn.shappky/com.yn.shappky.MainActivity
+
+monument_valley:
+  - com.ustwo.mv.epicgames/com.unity3d.player.UnityPlayerActivity
