Add icons + fixes

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -58,3 +58,15 @@ shappky:
 
 monument_valley:
   - com.ustwo.mv.epicgames/com.unity3d.player.UnityPlayerActivity
+
+mobicite:
+  - ca.agencemobilitedurable.mobicite/ca.agencemobilitedurable.mobicite.MainActivity
+
+servus:
+  - ca.servus.mbanking/com.ebankit.android.servus.Public.SplashScreenActivity
+
+alberta_wallet:
+  - ca.ab.gov.digitalwallet/ca.ab.gov.digitalwallet.MainActivity
+
+banque_laurentienne:
+  - ca.laurentianbank.mobileapp/com.central1.mobileapp.MainActivity
