--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -70,3 +70,36 @@ alberta_wallet:
 
 banque_laurentienne:
   - ca.laurentianbank.mobileapp/com.central1.mobileapp.MainActivity
+
+alliance_online_mobile:
+  - com.alliance.AOPMobileApp/com.alliance.AOPMobileApp.MainActivity
+
+celcom_digi:
+  - com.celcomdigi.selfcare/com.main.MainActivity
+
+georgia_lottery:
+  - com.lottery.georgia/com.lottery.georgia.MainActivity
+
+honestview:
+  - com.olant.honev/com.juanvision.modulelogin.activity.SplashActivity
+
+kwsp_i_akaun:
+  - com.epf.mip/com.epf.mip.MainActivity
+
+mydigital_id:
+  - my.mimos.signetclient/my.mimos.digitalid.LandingActivity
+
+myjpj:
+  - com.jpj.jpj_info/com.jpj.jpj_info.MainActivity
+
+ryt_bank:
+  - my.rytbank.app/my.rytbank.app.MainActivity
+
+sarawak_water:
+  - com.sarawakwater/com.sarawakwater.MainActivity
+
+seb_cares:
+  - com.SEBApp/com.SEBApp.MainActivity
+
+ufirst_perodua_passport:
+  - com.perodua.ufirst/com.perodua.ufirst.MainActivity
