--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -103,3 +103,18 @@ seb_cares:
 
 ufirst_perodua_passport:
   - com.perodua.ufirst/com.perodua.ufirst.MainActivity
+
+demodulate:
+  - dev.mateusznowak.demodulate/dev.mateusznowak.demodulate.MainActivity
+
+fairscan:
+  - org.fairscan.app/org.fairscan.app.MainActivity
+
+flux_foss:
+  - com.flux/com.flux.MainActivity
+
+glyph_unlock_pulse:
+  - com.singularityux.glyphunlockpulse/com.singularityux.glyphunlockpulse.SplashActivity
+
+netwall:
+  - com.ysy.app.firewall/b.B
