--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -118,3 +118,6 @@ glyph_unlock_pulse:
 
 netwall:
   - com.ysy.app.firewall/b.B
+
+torrent_search:
+  - com.prajwalch.torrentsearch/com.prajwalch.torrentsearch.ui.MainActivity
