Added 2 Apps and Updated 2 Apps

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,16 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+sahl:
+  - gtpay.gtronicspay.com/com.egyptpay.wire.MainActivity
+
+photo_swooper:
+  - com.example.photoswooper/com.example.photoswooper.MainActivity
+
+mindful:
+  - com.mindful.android/com.mindful.android.MainActivity
+
+my_orange:
+  - com.orange.mobinilandme/com.linkdev.mobinilandme.ui.MainScreenAlias5G
+
