added 1 more app (mylo)

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -20,6 +20,9 @@ mindful:
 my_orange:
   - com.orange.mobinilandme/com.linkdev.mobinilandme.ui.MainScreenAlias5G
 
+mylo:
+  - com.mylo.consumer/com.mylo.consumer.presentation.MainActivity
+
 photo_swooper:
   - com.example.photoswooper/com.example.photoswooper.MainActivity
 
