Added 3 new apps, updated 2 new ones (#1271)
* Added 2 Apps and Updated 2 Apps

* reordered contribs/icons.yml entries

* added 1 more app (mylo)

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,20 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+
+mindful:
+  - com.mindful.android/com.mindful.android.MainActivity
+
+my_orange:
+  - com.orange.mobinilandme/com.linkdev.mobinilandme.ui.MainScreenAlias5G
+
+mylo:
+  - com.mylo.consumer/com.mylo.consumer.presentation.MainActivity
+
+photo_swooper:
+  - com.example.photoswooper/com.example.photoswooper.MainActivity
+
+sahl:
+  - gtpay.gtronicspay.com/com.egyptpay.wire.MainActivity
+
