--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -29,3 +29,10 @@ photo_swooper:
 sahl:
   - gtpay.gtronicspay.com/com.egyptpay.wire.MainActivity
 
+google_find_hub:
+  category: 'Google'
+  compinfos:
+    - com.google.android.apps.adm/com.google.android.apps.adm.activities.MainActivity
+
+summary_expressive:
+  - me.nanova.summaryexpressive/me.nanova.summaryexpressive.MainActivity
