--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -36,3 +36,6 @@ google_find_hub:
 
 summary_expressive:
   - me.nanova.summaryexpressive/me.nanova.summaryexpressive.MainActivity
+
+db_bahnbonus:
+  - com.deutschebahn.bahnbonus/com.deutschebahn.bahnbonus.ui.login.LoginActivityDefault
