Fix icon link for CUSA

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -39,3 +39,6 @@ summary_expressive:
 
 db_bahnbonus:
   - com.deutschebahn.bahnbonus/com.deutschebahn.bahnbonus.ui.login.LoginActivityDefault
+  
+credit_union_sa:
+  - au.com.cusa.android/au.com.cusa.android.MainActivity
