Add icon for Jetstar

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -42,3 +42,6 @@ db_bahnbonus:
   
 credit_union_sa:
   - au.com.cusa.android/au.com.cusa.android.MainActivity
+  
+jetstar:
+  - com.ink.jetstar.mobile.app/com.ink.jetstar.mobile.app.MainActivity
