Fix icon link, add icon (#1273)
* Fix icon link for CUSA

* Add icon for Jetstar

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -39,3 +39,9 @@ summary_expressive:
 
 db_bahnbonus:
   - com.deutschebahn.bahnbonus/com.deutschebahn.bahnbonus.ui.login.LoginActivityDefault
+  
+credit_union_sa:
+  - au.com.cusa.android/au.com.cusa.android.MainActivity
+  
+jetstar:
+  - com.ink.jetstar.mobile.app/com.ink.jetstar.mobile.app.MainActivity
