Fix icon link for Nebula

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -45,3 +45,6 @@ credit_union_sa:
   
 jetstar:
   - com.ink.jetstar.mobile.app/com.ink.jetstar.mobile.app.MainActivity
+  
+nebula:
+  - tv.standard.nebula/tv.standard.nebula.main.view.activities.MainActivity
